--- a/app/templates/relations.html
+++ b/app/templates/relations.html
@@ -1,15 +1,9 @@
 <!doctype html>
 <html>
-<head>
-    <title>Stored Host-Parasite Relations</title>
-    <style>
-        table, th, td {
-            border: 1px solid black;
-            border-collapse: collapse;
-            padding: 5px;
-        }
-    </style>
-</head>
+    <head>
+        <title>Stored Host-Parasite Relations</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    </head>
 <body>
     <h1>Host-Parasite Relations</h1>
     <table>
