completed search based on foreign key

--- a/app/templates/add_host.html
+++ b/app/templates/add_host.html
@@ -9,11 +9,14 @@
 
     <form method="POST">
 
-        <label>Host Species Name</label>
+        <label>Host Name</label>
         <input type="text" name="host_name" required><br>
 
+        <label>Host Species Name</label>
+        <input type="text" name="species_name"><br>
+
         <label>Genus:</label>
-        <input type="text" name="dwc_genus" required><br>
+        <input type="text" name="dwc_genus"><br>
 
         <label>Subgenus:</label>
         <input type="text" name="dwc_subgenus"><br>
