--- a/app/templates/add_parasite.html
+++ b/app/templates/add_parasite.html
@@ -9,10 +9,13 @@
     <form method="POST">
 
         <label>Parasite Name:</label>
-        <input type="text" name="parasite_name"><br>
+        <input type="text" name="parasite_name" required><br>
+
+        <label>Parasite Species Name:</label>
+        <input type="text" name="species_name"><br>
 
         <label>Genus:</label>
-        <input type="text" name="dwc_genus" required><br>
+        <input type="text" name="dwc_genus"><br>
 
         <label>Subgenus:</label>
         <input type="text" name="dwc_subgenus"><br>
