--- a/app/templates/list_parasites.html
+++ b/app/templates/list_parasites.html
@@ -12,10 +12,10 @@
         <thead>
             <tr>
                 <th>ID</th>
+                <th>Parasite Name</th>
                 <th>Species Name</th>
                 <th>Genus</th>
-                <th>Subgenus</th>
-                <th>Species</th>
+                <th>Specific Epithet</th>
                 <th>Tribe</th>
                 <th>Subfamily</th>
                 <th>Family</th>
@@ -28,16 +28,16 @@
             {% for p in parasites %}
             <tr>
                 <td>{{ p.parasite_ID }}</td>
+                <td>{{ p.parasite_name or "n.a." }}</td>
                 <td>{{ p.parasite_species_name }}</td>
                 <td>{{ p.dwc_genus }}</td>
-                <td>{{ p.dwc_subgenus }}</td>
                 <td>{{ p.dwc_specificEpithet }}</td>
                 <td>{{ p.dwc_tribe }}</td>
                 <td>{{ p.dwc_subfamily }}</td>
                 <td>{{ p.dwc_family }}</td>
                 <td>{{ p.dwc_superfamily }}</td>
                 <td>{{ p.dwc_order }}</td>
-                <td>{{ p.entry_by }}</td>
+                <td>{{ p.entry_by or "n.a." }}</td>
             </tr>
             {% endfor %}
         </tbody>
