--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -18,9 +18,12 @@
     </form>
 
     <p><a href="{{ url_for('main.insert_form') }}">➕ Insert a new host-parasite relation</a></p>
+    <p><a href="{{ url_for('main.relations') }}">➕ View all host-parasite relations</a></p>
     <p><a href="{{ url_for('main.add_parasite') }}">🪲 Add a new parasite record</a></p>
     <p><a href="{{ url_for('main.list_parasites') }}">🪲 View all parasite records</a></p>
     <p><a href="{{ url_for('main.add_host') }}">🌿 Add a new host plant record</a></p>
+    <p><a href="{{ url_for('main.list_hosts') }}">🌿 View all host records</a></p>
+
 
 
 
